# graphiti-mcp-but-working

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  auth.md  docker-compose.yml  graphiti_mcp_server.py  pyproject.toml  redis.conf  run_server.py
graphiti_mcp_server/: __init__.py  __main__.py  main.py
graphiti_mcp_server/auth/: __init__.py  middleware.py  nonce.py  principal.py
graphiti_mcp_server/client/: __init__.py  graphiti.py
graphiti_mcp_server/config/: __init__.py  embedder.py  graphiti.py  llm.py  neo4j.py  redis.py  settings.py
graphiti_mcp_server/group_id/: __init__.py  context.py
graphiti_mcp_server/models/: __init__.py  entities.py  queue.py  responses.py
graphiti_mcp_server/queue/: __init__.py  init.py  manager.py  state.py  worker.py
graphiti_mcp_server/resources/: __init__.py  status.py
graphiti_mcp_server/tools/: __init__.py  admin.py  edges.py  episodes.py  groups.py  memory.py  queue_status.py  search.py
graphiti_mcp_server/utils/: __init__.py  formatters.py
