[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.11,<4"
#dependencies = [
#    "mcp>=1.5.0",
#    "openai>=1.91.0",
#    "graphiti-core>=0.30.0rc5",
#    "azure-identity>=1.21.0",
#    "graphiti-core",
#]

dependencies = [
    "mcp>=1.16.0",
    "pydantic>=2.11.9",
    "neo4j>=6.0.2",
    "diskcache>=5.6.3",
    "openai>=2.1.0",
    "tenacity>=9.1.2",
    "numpy>=2.3.3",
    "python-dotenv>=1.1.1",
    "graphiti-core==0.26.3",
    "opensearch-py>=3.0.0",
    "aiohttp>=3.12.15",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.1",
    "redis>=5.0.0"
]

